[package]
name = "secret-keeper-test_util"
description = "utilities used for testing secret-keeper and subcrates"
version = "0.3.0"
authors = ["stevelr <git@somecool.net>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
keywords = ["crypto"]

[dependencies]
bytes = "0.5"
mktemp = "0.4"
random-fast-rng = "0.1"
tokio = { version = "0.2", features = ["fs"] }

[dev-dependencies]
tokio-test = "0.2"

