[package]
name = "encrypt-rs"
description = "command-line envelope encryption with secret-keepers"
version = "0.3.0"
authors = ["stevelr <git@somecool.net>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
keywords = ["security","crypto","xchacha20","aes", "lz4"]
categories = ["cryptography","command-line-utilities"]

[dependencies]
secret-keeper = { path="../../core"}
secret-keeper-prompt = { path="../../keepers/prompt", optional = true}
secret-keeper-hashivault = { path="../../keepers/hashivault", optional = true}
secret-keeper-cloudkms = { path="../../keepers/cloudkms", optional = true}
secret-keeper-test_util = { path="../../test_util"}

bincode = "1.2"
clap = { version = "3.0.0-beta.1", git="https://github.com/clap-rs/clap/" }
serde = {version = "1.0", features=["derive"]}
thiserror = "1.0"
tokio = { version = "0.2", features = ["rt-core"]}

[features]
default = [ "full" ]
# base build is 'env' keeper only
base = []
full = [ "base", "prompt", "hashivault", "cloudkms" ]
prompt = [ "secret-keeper-prompt" ]
hashivault = [ "secret-keeper-hashivault" ]
cloudkms = [ "secret-keeper-cloudkms" ]

[dev-dependencies]
mktemp = "0.4"
hex = "0.4"

[[bin]]
path = "src/main.rs"
name = "encrypt"
