[package]
name = "encrypt-rs"
description = "Envelope encryption with secret-keepers"
version = "0.3.7"
authors = ["stevelr <git@somecool.net>"]
edition = "2018"
repository = "https://github.com/stevelr/secret-keeper/tree/master/examples/encrypt-rs"
license = "Apache-2.0 OR MIT"
keywords = ["security","crypto","xchacha20","aes", "lz4"]
categories = ["cryptography","command-line-utilities"]
readme = "README.md"
exclude = [
  "Cargo.lock",
  ".gitignore"
]

[dependencies]
secret-keeper = { version = "0.3", path = "../../core" }
secret-keeper-prompt = { version = "0.3", optional = true, path = "../../keepers/prompt"}
secret-keeper-hashivault = { version = "0.3", optional = true, path = "../../keepers/hashivault"}
secret-keeper-cloudkms = { version = "^0.3.6", optional = true, path = "../../keepers/cloudkms"}

bincode = "1.2"
clap = { version = "3.0.0-beta.1", git="https://github.com/clap-rs/clap/" }
serde = {version = "1.0", features=["derive"]}
thiserror = "1.0"
tokio = { version = "0.2", features = ["rt-core"]}

[features]
default = [ "full" ]
# base build is 'env' keeper only
base = []
full = [ "base", "prompt", "hashivault", "cloudkms" ]
prompt = [ "secret-keeper-prompt" ]
hashivault = [ "secret-keeper-hashivault" ]
cloudkms = [ "secret-keeper-cloudkms" ]

[dev-dependencies]
mktemp = "0.4"
hex = "0.4"
secret-keeper-test_util = { version = "0.3" }

[[bin]]
path = "src/main.rs"
name = "encrypt"
