[package]
name = "secret-keeper-cloudkms"
description = "CloudKMS SecretKeeper, an integration with Google Cloud KMS for https://crates.io/crates/secret-keeper"
version = "0.3.0"
authors = ["stevelr <git@somecool.net>"]
edition = "2018"

[dependencies]
secret-keeper = { path="../../core" }
#
async-trait = "0.1"
bytes = "0.5"
googapis = { version = "0.1", features = ["google-cloud-kms-v1"] }
gouth = { version = "0.1" }
serde_urlencoded = "0.6"
tonic = { version = "0.2", features = ["tls"] }
url = "2.1"


