[package]
name = "secret-keeper-hashivault"
description = "Hashivault SecretKeeper, an integration with Hashicorp Vault for https://crates.io/crates/secret-keeper"
version = "0.3.5"
authors = ["stevelr <git@somecool.net>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
keywords = ["security","crypto","vault"]
categories = ["cryptography", "api-bindings"]
repository = "https://github.com/stevelr/secret-keeper/tree/master/keepers/hashivault"
readme = "README.md"
exclude = [
  "Cargo.lock",
  ".gitignore"
]

[dependencies]
secret-keeper = { version="0.3", path="../../core" }
#
async-trait = "0.1"
base64 = "0.12"
bytes = "0.5"
http = "0.2"
reqwest = { version = "0.10", features = [ "json"] }
serde_derive = {version="1.0", features = ["deserialize_in_place"]}
serde_urlencoded = "0.6"
serde = {version = "1.0", features = ["derive"]}
url = "2.1"

[dev-dependencies]
hex = "0.4"
lazy_static = "1.4"
random-fast-rng = "0.1"
tokio-test = "0.2"
tokio = { version = "0.2", features = [] }
