[package]
name = "secret-keeper-prompt"
description = "Prompt SecretKeeper, an envelope encryption add-on for https://crates.io/crates/secret-keeper"
version = "0.3.0"
authors = ["stevelr <git@somecool.net>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
keywords = ["security","crypto"]
categories = ["cryptography"]
repository = "https://github.com/stevelr/secret-keeper/tree/master/keepers/prompt"

[dependencies]
secret-keeper = { version = "0.3" }
async-trait = "0.1"
bytes = "0.5"
rpassword = { version = "4.0" }
